--- a/sub_2.html
+++ b/sub_2.html
@@ -268,7 +268,7 @@
                         <div class="totowrap_position">
 
                             <div data-aos="fade-right" data-aos-duration="2000" class="character_txt3">
-                                <p class="character_big_txt">클로바 <span>Bibi</span></p>
+                                <p class="character_big_txt">클로바 <span>Clova</span></p>
                                 <p class="character_small_txt">행운을 가져다주는 클로버</p>
                                 <p>
                                     클로바씨 입니다! 누군가의 행운이 담긴 클로버에서 태어났습니다. 비비와 토토가 <br>
