--- a/sub_5_2.html
+++ b/sub_5_2.html
@@ -94,7 +94,7 @@
                     Help
                 </p>
                 <div class="banner_pojition">
-
+                    <img class="banner_clova" src="images/sub_5_img/banner_clova.svg" alt="banner_clova">
                 </div>
 
             </div>
