--- a/sub_5_2.html
+++ b/sub_5_2.html
@@ -17,9 +17,10 @@
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://wowjs.uk/css/libs/animate.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <script src="https://wowjs.uk/dist/wow.min.js"></script>
     <script src="js/wow_script.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/5.4.5/css/swiper.min.css"> -->
 </head>
 
 <body>
