--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                         <div class="link_wrap">
                             <ul class="link">
                                 <li class="line">
-                                    <a href="#">Login</a>
+                                    <a href="javascript:return false;">Login</a>
                                 </li>
                                 <li class="line">
-                                    <a href="#">Join</a>
+                                    <a href="javascript:return false;">Join</a>
                                 </li>
                                 <li>
-                                    <a href="#">English</a>
+                                    <a href="javascript:return false;">English</a>
                                 </li>
                             </ul>
                         </div>
@@ -63,22 +63,22 @@
                                 <div class="submenu">
                                     <div class="inner_submenu">
                                         <ul class="brand_menu">
-                                            <li><a href="sub_1.html">Brand Story</a></li>
-                                            <li><a href="sub_2.html">Character</a></li>
+                                            <li><a href="sub_1.html#section1">Brand Story</a></li>
+                                            <li><a href="sub_2.html#section1">Character</a></li>
                                         </ul>
                                         <ul class="shop_menu">
-                                            <li><a href="sub_3_1.html">Icecream</a></li>
-                                            <li><a href="sub_3_1.html">Snack</a></li>
-                                            <li><a href="sub_3_1.html">Food</a></li>
-                                            <li><a href="sub_3_1.html">DRINK</a></li>
-                                            <li><a href="sub_3_1.html">Goods</a></li>
+                                            <li><a href="sub_3_1.html#blank">Icecream</a></li>
+                                            <li><a href="sub_3_1.html#blank">Snack</a></li>
+                                            <li><a href="sub_3_1.html#blank">Food</a></li>
+                                            <li><a href="sub_3_1.html#blank">DRINK</a></li>
+                                            <li><a href="sub_3_1.html#blank">Goods</a></li>
                                         </ul>
                                         <ul class="event_menu">
                                             <li><a href="sub_4.html">Event</a></li>
                                         </ul>
                                         <ul class="help_menu">
-                                            <li><a href="sub_5_1.html">Q&A</a></li>
-                                            <li><a href="sub_5_2.html">News</a></li>
+                                            <li><a href="sub_5_1.html#blank2">Q&A</a></li>
+                                            <li><a href="sub_5_2.html#blank2">News</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -213,7 +213,7 @@
             <div class="slick">
                 <section class="regular slider">
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/pink1_icebar.jpg" alt="pink1_icebar">
                             </div>
@@ -223,7 +223,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/blue1_jelly.jpg" alt="blue1_jelly">
                             </div>
@@ -233,7 +233,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/pink2_shake.jpg" alt="pink2_shake">
                             </div>
@@ -244,7 +244,7 @@
 
                     </div>
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/blue2_milk.jpg" alt="blue2_milk">
                             </div>
@@ -256,7 +256,7 @@
 
                     </div>
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/pink3_icecream.jpg" alt="pink3_icecream">
                             </div>
@@ -266,7 +266,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/blue3_foodbox.jpg" alt="blue3_foodbox">
                             </div>
@@ -277,7 +277,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/pink4_bread.jpg" alt="pink4_bread">
                             </div>
@@ -288,7 +288,7 @@
 
                     </div>
                     <div>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="slick_img_wrap">
                                 <img src="images/main_img/3_pick_product/blue4_can.jpg" alt="blue4_can">
                             </div>
@@ -395,7 +395,7 @@
 
         <div id="ad_banner">
             <div class="inner_adbanner">
-                <a href="#">자세히보기</a>
+                <a href="javascript:return false;">자세히보기</a>
                 <img src="images/main_img/5_adbanner/ad_banner.jpg" alt="adbanner">
             </div>
 
@@ -412,7 +412,7 @@
                 <ul class="event_content">
                     <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="300">
 
-                        <li><a href="#">
+                        <li><a href="javascript:return false;">
                                 <div class="event_img_wrap">
                                     <img src="images/main_img/6_event/event_1_review.jpg" alt="event_1_review">
                                 </div>
@@ -421,7 +421,7 @@
                             </a></li>
                     </div>
                     <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-                        <li><a href="#">
+                        <li><a href="javascript:return false;">
 
                                 <div class="event_img_wrap">
                                     <img src="images/main_img/6_event/event_3mint.jpg" alt="event_1_review">
@@ -431,7 +431,7 @@
                             </a></li>
                     </div>
                     <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="700">
-                        <li><a href="#">
+                        <li><a href="javascript:return false;">
                                 <div class="event_img_wrap">
                                     <img src="images/main_img/6_event/event_4_dailycheck.jpg" alt="event_1_review">
                                 </div>
@@ -471,7 +471,7 @@
                         <input type="text" placeholder="검색어를입력하세요">
                     </form>
                     <div class="serch_btn">
-                        <a href="#"><img src="images/main_img/7_search/search_icon.svg" alt="search_icon"></a>
+                        <a href="javascript:return false;"><img src="images/main_img/7_search/search_icon.svg" alt="search_icon"></a>
                     </div>
                 </div>
                 <p class="search_bold">Search Store</p>
@@ -507,32 +507,32 @@
                 <div class="slider_wrap2">
                     <section class="regular2 slider">
                         <div>
-                            <a href="#">
+                            <a href="javascript:return false;">
                                 <img src="images/main_img/8_instagram/insta_1.jpg">
                             </a>
                         </div>
                         <div>
-                            <a href="#">
+                            <a href="javascript:return false;">
                                 <img src="images/main_img/8_instagram/insta_2.jpg">
                             </a>
                         </div>
                         <div>
-                            <a href="#">
+                            <a href="javascript:return false;">
                                 <img src="images/main_img/8_instagram/insta_3.jpg">
                             </a>
                         </div>
                         <div>
-                            <a href="#">
+                            <a href="javascript:return false;">
                                 <img src="images/main_img/8_instagram/insta_4.jpg">
                             </a>
                         </div>
                         <div>
-                            <a href="#">
+                            <a href="javascript:return false;">
                                 <img src="images/main_img/8_instagram/insta_5.jpg">
                             </a>
                         </div>
                         <div>
-                            <a href="#">
+                            <a href="javascript:return false;">
                                 <img src="images/main_img/8_instagram/insta_6.jpg">
                             </a>
                         </div>
@@ -549,16 +549,16 @@
                 <div class="icon_wrap">
                     <ul class="icon">
                         <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="300">
-                            <li><a href="#"><img src="images/main_img/8_instagram/icon_x.svg" alt=""></a></li>
+                            <li><a href="javascript:return false;"><img src="images/main_img/8_instagram/icon_x.svg" alt=""></a></li>
                         </div>
                         <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="500">
-                            <li><a href="#"><img src="images/main_img/8_instagram/icon_instagram.svg" alt=""></a></li>
+                            <li><a href="javascript:return false;"><img src="images/main_img/8_instagram/icon_instagram.svg" alt=""></a></li>
                         </div>
                         <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="700">
-                            <li><a href="#"><img src="images/main_img/8_instagram/icon_facebook.svg" alt=""></a></li>
+                            <li><a href="javascript:return false;"><img src="images/main_img/8_instagram/icon_facebook.svg" alt=""></a></li>
                         </div>
                         <div data-aos="fade-up" data-aos-easing="linear" data-aos-duration="900">
-                            <li><a href="#"><img src="images/main_img/8_instagram/icon_youtube.svg" alt=""></a></li>
+                            <li><a href="javascript:return false;"><img src="images/main_img/8_instagram/icon_youtube.svg" alt=""></a></li>
                         </div>
                     </ul>
 
@@ -577,12 +577,12 @@
         </div>
         <div id="footer">
             <div class="footer_logo">
-                <h1><a href="#"><img src="images/footer/logo.svg" alt="footer_logo"></a></h1>
+                <h1><a href="javascript:return false;"><img src="images/footer/logo.svg" alt="footer_logo"></a></h1>
                 <ul class="footer_top">
-                    <li class="line"><a href="#">개인정보처리방침</a></li>
-                    <li class="line"><a href="#"> 이메일 무단 수집 거부</a></li>
-                    <li class="line"><a href="#">회사소개 </a></li>
-                    <li><a href="#">이용안내</a></li>
+                    <li class="line"><a href="javascript:return false;">개인정보처리방침</a></li>
+                    <li class="line"><a href="javascript:return false;"> 이메일 무단 수집 거부</a></li>
+                    <li class="line"><a href="javascript:return false;">회사소개 </a></li>
+                    <li><a href="javascript:return false;">이용안내</a></li>
                 </ul>
 
             </div>
