--- a/sub_3_2.html
+++ b/sub_3_2.html
@@ -35,13 +35,13 @@
                         <div class="link_wrap">
                             <ul class="link">
                                 <li class="line">
-                                    <a href="#">Login</a>
+                                    <a href="javascript:return false;">Login</a>
                                 </li>
                                 <li class="line">
-                                    <a href="#">Join</a>
+                                    <a href="javascript:return false;">Join</a>
                                 </li>
                                 <li>
-                                    <a href="#">English</a>
+                                    <a href="javascript:return false;">English</a>
                                 </li>
                             </ul>
                         </div>
@@ -61,22 +61,23 @@
                                 <div class="submenu">
                                     <div class="inner_submenu">
                                         <ul class="brand_menu">
-                                            <li class="brand_menu1"><a class="on" href="sub_1.html">Brand Story</a></li>
-                                            <li class="brand_menu2"><a class="on" href="sub_2.html">Character</a></li>
+                                            <li class="brand_menu1"><a class="on" href="sub_1.html#section1">Brand Story</a></li>
+                                            <li class="brand_menu2"><a class="on" href="sub_2.html#section1">Character</a></li>
                                         </ul>
                                         <ul class="shop_menu">
-                                            <li class="shop_menu1"><a class="on" href="#">Icecream</a></li>
-                                            <li><a class="on" href="sub_3_1.html">Snack</a></li>
-                                            <li><a class="on" href="sub_3_1.html">Food</a></li>
-                                            <li><a class="on" href="sub_3_1.html">DRINK</a></li>
-                                            <li><a class="on" href="sub_3_1.html">Goods</a></li>
+                                            <li class="shop_menu1"><a class="on" href="sub_3_1.html#blank">Icecream</a>
+                                            </li>
+                                            <li><a class="on" href="sub_3_1.html#blank">Snack</a></li>
+                                            <li><a class="on" href="sub_3_1.html#blank">Food</a></li>
+                                            <li><a class="on" href="sub_3_1.html#blank">DRINK</a></li>
+                                            <li><a class="on" href="sub_3_1.html#blank">Goods</a></li>
                                         </ul>
                                         <ul class="event_menu">
                                             <li><a class="on" href="sub_4.html">Event</a></li>
                                         </ul>
                                         <ul class="help_menu">
-                                            <li><a class="on" href="sub_5_1.html">Q&A</a></li>
-                                            <li><a class="on" href="sub_5_2.html">News</a></li>
+                                            <li><a class="on" href="sub_5_1.html#blank2">Q&A</a></li>
+                                            <li><a class="on" href="sub_5_2.html#blank2">News</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -110,8 +111,8 @@
                                 alt="shop_detail_1_icebar">
                         </div>
                         <div class="shop_position">
-                            <a href="#"> <img class="share" src="images/sub_3_2_img/share.svg" alt="share"></a>
-                            <a href="#"><img class="heart" src="images/sub_3_2_img/heart.svg" alt="heart"></a>
+                            <a href="javascript:return false;"> <img class="share" src="images/sub_3_2_img/share.svg" alt="share"></a>
+                            <a href="javascript:return false;"><img class="heart" src="images/sub_3_2_img/heart.svg" alt="heart"></a>
                             <div class="bg_circle">
 
                             </div>
@@ -139,8 +140,8 @@
                             총 상품금액 <strong>0 원</strong>
                         </p>
                         <ul class="product_btn">
-                            <li><a href="#">구매</a></li>
-                            <li><a href="#">장바구니</a></li>
+                            <li><a href="javascript:return false;">구매</a></li>
+                            <li><a href="javascript:return false;">장바구니</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -150,7 +151,7 @@
                 <p class="product_top_txt">이상품과 함께 많이 구매한 상품</p>
                 <ul class="sub_product_wrap">
                     <li>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="img_wrap2">
                                 <img src="images/sub_3_2_img/bread_2.jpg" alt="bread_2">
                             </div>
@@ -160,7 +161,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="img_wrap2">
                                 <img src="images/sub_3_2_img/foodbox_3.jpg" alt="foodbox_3">
                             </div>
@@ -169,7 +170,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="img_wrap2">
                                 <img src="images/sub_3_2_img/griptok.jpg" alt="griptok">
                             </div>
@@ -178,7 +179,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="img_wrap2">
                                 <img src="images/sub_3_2_img/icebar_3_orange.jpg" alt="icebar_3_orange">
                             </div>
@@ -187,7 +188,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="javascript:return false;">
                             <div class="img_wrap2">
                                 <img src="images/sub_3_2_img/milk_4_choco.jpg" alt="milk_4_choco">
                             </div>
@@ -329,11 +330,11 @@
         <!-- toggle_e-->
         <div id="review">
             <p class="review_txt">상품후기 (0)</p>
-            <p class="review_txt2" >작성된 상품후가 없습니다. </p>
+            <p class="review_txt2">작성된 상품후가 없습니다. </p>
         </div>
         <div id="qna">
             <p class="review_txt">Q&A</p>
-            <p class="review_txt2" >작성된 Q&A가 없습니다.</p>
+            <p class="review_txt2">작성된 Q&A가 없습니다.</p>
         </div>
 
 
@@ -350,25 +351,25 @@
         <!-- footer_s -->
         <div id="footer">
             <div class="footer_logo">
-                <h1><a href="#"><img src="images/footer/logo.svg" alt="footer_logo"></a></h1>
+                <h1><a href="javascript:return false;"><img src="images/footer/logo.svg" alt="footer_logo"></a></h1>
                 <ul class="footer_top">
-                    <li class="line"><a href="#">개인정보처리방침</a></li>
-                    <li class="line"><a href="#"> 이메일 무단 수집 거부</a></li>
-                    <li class="line"><a href="#">회사소개 </a></li>
-                    <li><a href="#">이용안내</a></li>
+                    <li class="line"><a href="javascript:return false;">개인정보처리방침</a></li>
+                    <li class="line"><a href="javascript:return false;"> 이메일 무단 수집 거부</a></li>
+                    <li class="line"><a href="javascript:return false;">회사소개 </a></li>
+                    <li><a href="javascript:return false;">이용안내</a></li>
                 </ul>
                 <ul class="footer_logo_icon">
                     <li>
-                        <a href="#"><img src="images/footer/insta_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/insta_icon.svg" alt="insta_icon"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/footer/facebook_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/facebook_icon.svg" alt="insta_icon"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/footer/youtube_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/youtube_icon.svg" alt="insta_icon"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/footer/x_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/x_icon.svg" alt="insta_icon"></a>
                     </li>
                 </ul>
 
