--- a/sub_5_1.html
+++ b/sub_5_1.html
@@ -30,13 +30,13 @@
                         <div class="link_wrap">
                             <ul class="link">
                                 <li class="line">
-                                    <a href="#">Login</a>
+                                    <a href="javascript:return false;">Login</a>
                                 </li>
                                 <li class="line">
-                                    <a href="#">Join</a>
+                                    <a href="javascript:return false;">Join</a>
                                 </li>
                                 <li>
-                                    <a href="#">English</a>
+                                    <a href="javascript:return false;">English</a>
                                 </li>
                             </ul>
                         </div>
@@ -56,22 +56,22 @@
                                 <div class="submenu">
                                     <div class="inner_submenu">
                                         <ul class="brand_menu">
-                                            <li class="brand_menu1"><a class="on" href="sub_1.html">Brand Story</a></li>
-                                            <li class="brand_menu2"><a class="on" href="sub_2.html">Character</a></li>
+                                            <li class="brand_menu1"><a class="on" href="sub_1.html#section1">Brand Story</a></li>
+                                            <li class="brand_menu2"><a class="on" href="sub_2.html#section1">Character</a></li>
                                         </ul>
                                         <ul class="shop_menu">
-                                            <li class="shop_menu1"><a class="on" href="sub_3_1.html">Icecream</a></li>
-                                            <li><a class="on" href="sub_3_1.html">Snack</a></li>
-                                            <li><a class="on" href="sub_3_1.html">Food</a></li>
-                                            <li><a class="on" href="sub_3_1.html">DRINK</a></li>
-                                            <li><a class="on" href="sub_3_1.html">Goods</a></li>
+                                            <li class="shop_menu1"><a class="on" href="sub_3_1.html#blank">Icecream</a></li>
+                                            <li><a class="on" href="sub_3_1.html#blank">Snack</a></li>
+                                            <li><a class="on" href="sub_3_1.html#blank">Food</a></li>
+                                            <li><a class="on" href="sub_3_1.html#blank">DRINK</a></li>
+                                            <li><a class="on" href="sub_3_1.html#blank">Goods</a></li>
                                         </ul>
                                         <ul class="event_menu">
                                             <li><a class="on" href="sub_4.html">Event</a></li>
                                         </ul>
                                         <ul class="help_menu">
-                                            <li><a class="on" href="sub_5_1.html">Q&A</a></li>
-                                            <li><a class="on" href="sub_5_2.html">News</a></li>
+                                            <li><a class="on" href="sub_5_1.html#blank2">Q&A</a></li>
+                                            <li><a class="on" href="sub_5_2.html#blank2">News</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -93,17 +93,20 @@
                 </div>
 
             </div>
+            <div id="blank2">
+            </div>
         </div>
         <!-- banner e -->
         <!-- toggle_s -->
-
+            
         <div id="btn_section">
+           
             <ul class="btn_wrap">
                 <li class="qna_btn">
-                    <a class="on" href="sub_5_1.html">Q&A</a>
+                    <a class="on" href="sub_5_1.html#blank2">Q&A</a>
                 </li>
                 <li class="news_btn">
-                    <a class="on" href="sub_5_2.html">NEWS</a>
+                    <a class="on" href="sub_5_2.html#blank2">NEWS</a>
                 </li>
             </ul>
         </div>
@@ -280,25 +283,25 @@
         <!-- footer_s -->
         <div id="footer">
             <div class="footer_logo">
-                <h1><a href="#"><img src="images/footer/logo.svg" alt="footer_logo"></a></h1>
+                <h1><a href="javascript:return false;"><img src="images/footer/logo.svg" alt="footer_logo"></a></h1>
                 <ul class="footer_top">
-                    <li class="line"><a href="#">개인정보처리방침</a></li>
-                    <li class="line"><a href="#"> 이메일 무단 수집 거부</a></li>
-                    <li class="line"><a href="#">회사소개 </a></li>
-                    <li><a href="#">이용안내</a></li>
+                    <li class="line"><a href="javascript:return false;">개인정보처리방침</a></li>
+                    <li class="line"><a href="javascript:return false;"> 이메일 무단 수집 거부</a></li>
+                    <li class="line"><a href="javascript:return false;">회사소개 </a></li>
+                    <li><a href="javascript:return false;">이용안내</a></li>
                 </ul>
                 <ul class="footer_logo_icon">
                     <li>
-                        <a href="#"><img src="images/footer/insta_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/insta_icon.svg" alt="insta_icon"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/footer/facebook_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/facebook_icon.svg" alt="insta_icon"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/footer/youtube_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/youtube_icon.svg" alt="insta_icon"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="images/footer/x_icon.svg" alt="insta_icon"></a>
+                        <a href="javascript:return false;"><img src="images/footer/x_icon.svg" alt="insta_icon"></a>
                     </li>
                 </ul>
 
