--- a/sub_2.html
+++ b/sub_2.html
@@ -22,69 +22,64 @@
 </head>
 
 <body>
-    <div id="wrap">
-        <!-- btn -->
-        <p class="btn_top"><a href="sub_2.html#wrap"><img src="images/top.svg" alt="top"></a></p>
-        <p class="btn_bottom"><a href="sub_2.html#footer2"><img src="images/bottom.svg" alt="bottom"></a></p>
-        <!-- header_s -->
-        <div class="wrapper">
-            <div id="header">
-                <div>
-                    <div class="inner_header">
-                        <div class="link_wrap">
-                            <ul class="link">
-                                <li class="line">
-                                    <a href="javascript:return false;">Login</a>
+    <div class="wrapper">
+        <div id="header">
+            <div>
+                <div class="inner_header">
+                    <div class="link_wrap">
+                        <ul class="link">
+                            <li class="line">
+                                <a href="javascript:return false;">Login</a>
+                            </li>
+                            <li class="line">
+                                <a href="javascript:return false;">Join</a>
+                            </li>
+                            <li>
+                                <a href="javascript:return false;">English</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="nav_wrap">
+                        <h1>
+                            <a href="index.html"><img src="images/header/logo.svg" alt=""></a>
+                        </h1>
+                        <nav>
+                            <ul class="menu">
+                                <li class="blue"><a class="on" href="sub_1.html">BRAND</a>
                                 </li>
-                                <li class="line">
-                                    <a href="javascript:return false;">Join</a>
-                                </li>
-                                <li>
-                                    <a href="javascript:return false;">English</a>
-                                </li>
+                                <li class="pink"><a class="on" href="sub_3_1.html">SHOP</a></li>
+                                <li class="purple"><a class="on" href="sub_4.html">EVENT</a></li>
+                                <li class="green"><a class="on" href="sub_5_1.html">HELP</a></li>
                             </ul>
-                        </div>
-                        <div class="nav_wrap">
-                            <h1>
-                                <a href="index.html"><img src="images/header/logo.svg" alt=""></a>
-                            </h1>
-                            <nav>
-                                <ul class="menu">
-                                    <li class="blue"><a class="on" href="sub_1.html">BRAND</a>
-                                    </li>
-                                    <li class="pink"><a class="on" href="sub_3_1.html">SHOP</a></li>
-                                    <li class="purple"><a class="on" href="sub_4.html">EVENT</a></li>
-                                    <li class="green"><a class="on" href="sub_5_1.html">HELP</a></li>
-                                </ul>
-                                <!-- 형제요소 -->
-                                <div class="submenu">
-                                    <div class="inner_submenu">
-                                        <ul class="brand_menu">
-                                            <li class="brand_menu1"><a class="on" href="sub_1.html#section1">Brand Story</a></li>
-                                            <li class="brand_menu2"><a class="on" href="sub_2.html#section1">Character</a></li>
-                                        </ul>
-                                        <ul class="shop_menu">
-                                            <li><a class="on" href="sub_3_1.html#blank">Icecream</a></li>
-                                            <li><a class="on" href="sub_3_1.html#blank">Snack</a></li>
-                                            <li><a class="on" href="sub_3_1.html#blank">Food</a></li>
-                                            <li><a class="on" href="sub_3_1.html#blank">DRINK</a></li>
-                                            <li><a class="on" href="sub_3_1.html#blank">Goods</a></li>
-                                        </ul>
-                                        <ul class="event_menu">
-                                            <li><a class="on" href="sub_4.html">Event</a></li>
-                                        </ul>
-                                        <ul class="help_menu">
-                                            <li><a class="on" href="sub_5_1.html#blank2">Q&A</a></li>
-                                            <li><a class="on" href="sub_5_2.html#blank2">News</a></li>
-                                        </ul>
-                                    </div>
+                            <!-- 형제요소 -->
+                            <div class="submenu">
+                                <div class="inner_submenu">
+                                    <ul class="brand_menu">
+                                        <li class="brand_menu1"><a class="on" href="sub_1.html#section1">Brand Story</a></li>
+                                        <li><a class="on" href="sub_2.html#section1">Character</a></li>
+                                    </ul>
+                                    <ul class="shop_menu">
+                                        <li><a class="on" href="sub_3_1.html#blank">Icecream</a></li>
+                                        <li><a class="on" href="sub_3_1.html#blank">Snack</a></li>
+                                        <li><a class="on" href="sub_3_1.html#blank">Food</a></li>
+                                        <li><a class="on" class="on" href="sub_3_1.html#blank">DRINK</a></li>
+                                        <li><a class="on" href="sub_3_1.html#blank">Goods</a></li>
+                                    </ul>
+                                    <ul class="event_menu">
+                                        <li><a class="on" href="sub_4.html">Event</a></li>
+                                    </ul>
+                                    <ul class="help_menu">
+                                        <li><a class="on" href="sub_5_1.html#blank2">Q&A</a></li>
+                                        <li><a class="on" href="sub_5_2.html#blank2">News</a></li>
+                                    </ul>
                                 </div>
-                            </nav>
-                        </div>
+                            </div>
+                        </nav>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
         <!-- header_e -->
         <!-- banner s -->
         <div id="banner">
