--- a/sub_2.html
+++ b/sub_2.html
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+    <div id="wrap">
+        <!-- btn -->
+        <p class="btn_top"><a href="sub_2.html#wrap"><img src="images/top.svg" alt="top"></a></p>
+        <p class="btn_bottom"><a href="sub_2.html#footer2"><img src="images/bottom.svg" alt="bottom"></a></p>
+        <!-- header_s -->
     <div class="wrapper">
         <div id="header">
             <div>
